[project]
name = "tmessage-cli"
version = "0.1.0"
description = "AI-powered LinkedIn outreach message generator"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools]
py-modules = ["tmessage"]

[project.scripts]
tmessage = "tmessage:app"
